tests/cases/compiler-development/artifact/errors/diagnostic-trait-impl-return-mismatch.diagnostic
diagnostic error code=T0001 family=type message="method 'show' return type mismatch: expected i64, got bool" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/traits/errors/trait-impl-return-mismatch.ari" display="tests/cases/traits/errors/trait-impl-return-mismatch.ari" bytes=150
  Label index=0 role=primary source_id=0 source="tests/cases/traits/errors/trait-impl-return-mismatch.ari" line=6 column=20 end_line=6 end_column=24 byte_start=86 byte_end=90 message=""
  Snippet label=0 text="  --> tests/cases/traits/errors/trait-impl-return-mismatch.ari:6:20\n   |\n 6 |   fn show(self) -> bool {\n   |                    ^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/traits/errors/trait-impl-return-mismatch.ari" line=2 column=20 end_line=2 end_column=23 byte_start=35 byte_end=38 message="trait method 'show' returns i64"
  Snippet label=1 text="  --> tests/cases/traits/errors/trait-impl-return-mismatch.ari:2:20\n   |\n 2 |   fn show(self) -> i64\n   |                    ^^^"
  Note index=0 location=none message="trait impl methods must match the trait declaration exactly"
  Help index=0 location=none message="return i64 from this impl method or update the trait declaration"
